# Starlight-Dev

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MapEditor.sln  README  README.md  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh  build-relwithdbginfo.bat
.github/: FUNDING.yml
MapEditor/: AINB.cpp  AINB.h  AINBNodeDefMgr.asm  AINBNodeDefMgr.cpp  AINBNodeDefMgr.h  ActionMgr.cpp  ActionMgr.h  Actor.asm  Actor.cpp  Actor.h  ActorCollisionCreator.asm  ActorCollisionCreator.cpp  ActorCollisionCreator.h  ActorMgr.cpp  ActorMgr.h  BFEVFL.cpp  BFEVFL.h  BFEVFLBinaryVectorReader.cpp  BFEVFLBinaryVectorReader.h  BHTMP.asm  BHTMP.cpp  BHTMP.h  BVHBuilder.asm  BVHBuilder.cpp  BVHBuilder.h  BVNode.asm  BVNode.cpp  BVNode.h  Bfres.asm  Bfres.cpp  Bfres.h  BfresBinaryVectorReader.cpp  BfresBinaryVectorReader.h  BinaryVectorReader.asm  BinaryVectorReader.cpp  BinaryVectorReader.h  BinaryVectorWriter.asm  BinaryVectorWriter.cpp  BinaryVectorWriter.h  BufferObject.cpp  (+340 more)
MapEditor/Assets/Models/: TexturedArea.bfres  TexturedCube.bfres  TexturedCube.txtg  TexturedSphere.bfres
MapEditor/Assets/Shaders/: Default.frag  Default.vert  Disabled.frag  Game.frag  Instanced.frag  Instanced.vert  InstancedDiscard.frag  Picking.vert  Selected.frag  Selected.vert
MapEditor/Libraries/include/: zstd.h
MapEditor/Libraries/include/glad/: glad.h
MapEditor/Libraries/include/stb/: stb_image_write.h
MapEditor/Libraries/lib/: glfw3.lib  zstd_static.lib
MapEditor/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp
MapEditor/imgui_gizmo/: ImGuizmo.cpp
rootDir/Assets/Models/: TexturedArea.txtg  TexturedSphere.bfres
rootDir/Assets/Shaders/: ActorPainterSphere.frag  Cave.frag  Cave.vert  Instanced.frag  Instanced.vert  Picking.frag  Picking.vert  Selected.frag  Selected.vert  TemplatePreview.frag  TemplatePreview.vert  Terrain.frag  Terrain.tcs  Terrain.tes  Terrain.vert
src/: CMakeLists.txt  Editor.cpp  Editor.h  Main.cpp  glad.c
src/file/game/ainb/: AINBFile.cpp  AINBFile.h  EXB.cpp  EXB.h
src/file/game/bfres/: BfresBinaryVectorReader.cpp  BfresBinaryVectorReader.h  BfresBinaryVectorWriter.cpp  BfresBinaryVectorWriter.h  BfresFile.cpp  BfresFile.h
src/file/game/byml/: BymlFile.cpp  BymlFile.h
src/file/game/cave/: CrbinFile.cpp  CrbinFile.h
src/file/game/phive/: PhiveNavMesh.cpp  PhiveNavMesh.h  PhiveStaticCompoundFile.cpp  PhiveStaticCompoundFile.h
src/file/game/restbl/: ResTblFile.cpp  ResTblFile.h
src/file/game/sarc/: SarcFile.cpp  SarcFile.h
src/file/game/terrain/: HghtArchive.cpp  HghtArchive.h  HghtFile.cpp  HghtFile.h  MateArchive.cpp  MateArchive.h  MateFile.cpp  MateFile.h  TerrainSceneFile.cpp  TerrainSceneFile.h
src/file/game/texture/: FormatHelper.cpp  FormatHelper.h  TegraSwizzle.cpp  TegraSwizzle.h  TexToGoFile.cpp  TexToGoFile.h  TextureFormat.cpp  TextureFormat.h
src/file/tool/: AdditionalAINBNodes.cpp  AdditionalAINBNodes.h  GitIdentityFile.cpp  GitIdentityFile.h  LicenseFile.cpp  LicenseFile.h  PathConfigFile.cpp  PathConfigFile.h  ProjectConfigFile.cpp  ProjectConfigFile.h
src/forever_confidential/: PhiveClassGenerator.cpp  PhiveClassGenerator.h
src/game/: ActorPack.cpp  ActorPack.h  BancEntity.cpp  BancEntity.h  Scene.cpp  Scene.h
src/game/actor_component/: ActorComponentBase.h  ActorComponentFactory.cpp  ActorComponentFactory.h  ActorComponentModelInfo.cpp  ActorComponentModelInfo.h  ActorComponentShapeParam.cpp  ActorComponentShapeParam.h
src/gl/: BfresRenderer.cpp  BfresRenderer.h  BufferObject.cpp  BufferObject.h  Camera.cpp  Camera.h  CaveRenderer.cpp  CaveRenderer.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  SimpleMesh.cpp  SimpleMesh.h  TerrainRenderer.cpp  TerrainRenderer.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
src/glad/: glad.h
src/manager/: AINBNodeMgr.cpp  AINBNodeMgr.h  ActorInfoMgr.cpp  ActorInfoMgr.h  ActorPackMgr.cpp  ActorPackMgr.h  BfresFileMgr.cpp  BfresFileMgr.h  BfresRendererMgr.cpp  BfresRendererMgr.h  CaveMgr.cpp  CaveMgr.h  FramebufferMgr.cpp  FramebufferMgr.h  GameDataListMgr.cpp  GameDataListMgr.h  MergedActorMgr.cpp  MergedActorMgr.h  PluginMgr.cpp  PluginMgr.h  PopUpMgr.cpp  PopUpMgr.h  ProjectMgr.cpp  ProjectMgr.h  ShaderMgr.cpp  ShaderMgr.h  TerrainMgr.cpp  TerrainMgr.h  TexToGoFileMgr.cpp  TexToGoFileMgr.h  TextureMgr.cpp  TextureMgr.h  UIMgr.cpp  UIMgr.h
src/play/: CharacterController.cpp  CharacterController.h  GLDebugDrawer.cpp  GLDebugDrawer.h  PlaySession.cpp  PlaySession.h
src/plugin/: PluginBase.h
src/plugin/impl/: PluginFieldCleaner.cpp  PluginFieldCleaner.h  PluginTerrainModificationUtil.cpp  PluginTerrainModificationUtil.h
src/rendering/: ImGuiExt.cpp  ImGuiExt.h  ImGuizmo.cpp  ImGuizmo.h  UIWindowBase.cpp  UIWindowBase.h
src/rendering/actor/: UIActorTool.cpp  UIActorTool.h
src/rendering/ainb/: UIAINBEditor.cpp  UIAINBEditor.h  UIAINBEditorNodeBase.cpp  UIAINBEditorNodeBase.h
src/rendering/collision/: UICollisionGenerator.cpp  UICollisionGenerator.h
src/rendering/general/: UIContentBrowser.cpp  UIContentBrowser.h
src/rendering/mapeditor/: ActorPainter.cpp  ActorPainter.h  TerrainEditor.cpp  TerrainEditor.h  UIAILinks.cpp  UIAILinks.h  UIMapEditor.cpp  UIMapEditor.h
src/rendering/plugin/: UIPlugins.cpp  UIPlugins.h
src/rendering/popup/: PopUpBuilder.cpp  PopUpBuilder.h  PopUpCommon.cpp  PopUpCommon.h
src/tool/: AINBFileSearcher.cpp  AINBFileSearcher.h  ResourceSizeTableGenerator.cpp  ResourceSizeTableGenerator.h  SceneCreator.cpp  SceneCreator.h
src/tool/scene/: NavMeshImplementationBase.cpp  NavMeshImplementationBase.h  StaticCompoundImplementationBase.cpp  StaticCompoundImplementationBase.h
src/util/: BiMap.h  BinaryVectorReader.cpp  BinaryVectorReader.h  BinaryVectorWriter.cpp  BinaryVectorWriter.h  FileUtil.cpp  FileUtil.h  Frustum.cpp  Frustum.h  General.cpp  General.h  GitManager.cpp  GitManager.h  HardwareInfo.cpp  HardwareInfo.h  ImGuiNotify.h  Logger.cpp  Logger.h  Math.cpp  Math.h  MeshOptimizer.cpp  MeshOptimizer.h  backward.h  fa-solid-900.h
(+77 files in other folders)
